tests/enum_from/compile_fail/field/mapping_tuple_to_struct_fields.stderr
error: Missing required mapping to named field for Source::Tuple
  --> tests/enum_from/compile_fail/field/mapping_tuple_to_struct_fields.rs:13:9
   |
13 |         a: i64,
   |         ^
